# serializer version: 1
# name: test_switch_entities[5xu9h3][switch.goat_g1_advanced_mode:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_advanced_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Advanced mode',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'advanced_mode',
    'unique_id': '8516fbb1-17f1-4194-0000000_advanced_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_advanced_mode:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Advanced mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_advanced_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_border_switch:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_border_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Border switch',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'border_switch',
    'unique_id': '8516fbb1-17f1-4194-0000000_border_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_border_switch:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Border switch',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_border_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_child_lock:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'child_lock',
    'unique_id': '8516fbb1-17f1-4194-0000000_child_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_child_lock:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_cross_map_border_warning:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_cross_map_border_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cross map border warning',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cross_map_border_warning',
    'unique_id': '8516fbb1-17f1-4194-0000000_cross_map_border_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_cross_map_border_warning:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Cross map border warning',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_cross_map_border_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_move_up_warning:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_move_up_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Move up warning',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'move_up_warning',
    'unique_id': '8516fbb1-17f1-4194-0000000_move_up_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_move_up_warning:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Move up warning',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_move_up_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_safe_protect:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_safe_protect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Safe protect',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'safe_protect',
    'unique_id': '8516fbb1-17f1-4194-0000000_safe_protect',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_safe_protect:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Safe protect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_safe_protect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_true_detect:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.goat_g1_true_detect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'True detect',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'true_detect',
    'unique_id': '8516fbb1-17f1-4194-0000000_true_detect',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[5xu9h3][switch.goat_g1_true_detect:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 True detect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.goat_g1_true_detect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_advanced_mode:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.ozmo_950_advanced_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Advanced mode',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'advanced_mode',
    'unique_id': 'E1234567890000000001_advanced_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_advanced_mode:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Advanced mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ozmo_950_advanced_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_carpet_auto_boost_suction:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.ozmo_950_carpet_auto_boost_suction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Carpet auto-boost suction',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'carpet_auto_fan_boost',
    'unique_id': 'E1234567890000000001_carpet_auto_fan_boost',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_carpet_auto_boost_suction:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Carpet auto-boost suction',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ozmo_950_carpet_auto_boost_suction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_continuous_cleaning:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.ozmo_950_continuous_cleaning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Continuous cleaning',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'continuous_cleaning',
    'unique_id': 'E1234567890000000001_continuous_cleaning',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[yna5x1][switch.ozmo_950_continuous_cleaning:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Continuous cleaning',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ozmo_950_continuous_cleaning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
